Cleaned up after refactoring, some todos left

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,29 @@ include(CheckIncludeFileCXX)
 check_include_file_cxx(any HAS_ANY)
 check_include_file_cxx(string_view HAS_STRING_VIEW)
 check_include_file_cxx(coroutine HAS_COROUTINE)
-if (NOT "${CMAKE_CXX_STANDARD}" STREQUAL "")
+#if (NOT "${CMAKE_CXX_STANDARD}" STREQUAL "")
     # Do nothing
-elseif (HAS_ANY AND HAS_STRING_VIEW AND HAS_COROUTINE)
-    set(CMAKE_CXX_STANDARD 20)
-elseif (HAS_ANY AND HAS_STRING_VIEW)
-    set(CMAKE_CXX_STANDARD 17)
-else ()
-    set(CMAKE_CXX_STANDARD 14)
-endif ()
+    #elseif (HAS_ANY AND HAS_STRING_VIEW AND HAS_COROUTINE)
+set(CMAKE_CXX_STANDARD 20)
+    #elseif (HAS_ANY AND HAS_STRING_VIEW)
+    #set(CMAKE_CXX_STANDARD 17)
+    #else ()
+    #set(CMAKE_CXX_STANDARD 14)
+#endif ()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(${PROJECT_NAME} main.cc ${PROJECT_SOURCE_DIR}/lib/core/se.cpp)
+#add_executable(${PROJECT_NAME} main.cc ${PROJECT_SOURCE_DIR}/lib/core/se.cpp)
+add_executable(${PROJECT_NAME} 
+    lib/utils/utils.h
+    lib/cache/cache.h
+    lib/se_core/se.h
+    lib/utils/utils.cc
+    lib/cache/cache.cc
+    lib/se_core/se.cc
+    main.cc
+)
 
 # ##############################################################################
 # If you include the drogon source code locally in your project, use this method
@@ -55,11 +64,11 @@ drogon_create_views(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/views
 
 target_include_directories(${PROJECT_NAME}
                            PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
-                                   ${PROJECT_SOURCE_DIR}/lib/core
-                                   )
+                        )
 target_sources(${PROJECT_NAME}
                PRIVATE
                ${SRC_DIR}
+               ${SUBDIRECTORY_SOURCES}
                )
 # ##############################################################################
 # uncomment the following line for dynamically loading views 
